--- a/style.css
+++ b/style.css
@@ -170,6 +170,78 @@ margin-bottom: 30px;
     margin-top: 20px;
     
 }
+.maldives{
+ position: relative;
+ 
+}
+.indonesia{
+  position: relative;
+}
+.srilanka{
+  position: relative;
+}
+.north-america{
+  position: relative;
+}
+.kashmir{
+ position: relative;
+}
+.bangladesh{
+  position: relative;
+}
+.bandarban{
+  position: relative;
+}
+.title-1{
+  position: absolute;
+  margin-top: -200px;
+  margin-left: 420px;
+  color: white;
+  font-size: 28px;
+}
+.title-2{
+  position: absolute;
+  margin-top: -200px;
+  margin-left: 1020px;
+  color: white;
+  font-size: 28px;
+}
+.title-3{
+  position: absolute;
+  margin-top: -200px;
+  margin-left: 320px;
+  color: white;
+  font-size: 28px;
+}
+.title-4{
+  position: absolute;
+  margin-top: -200px;
+  margin-left: 720px;
+  color: white;
+  font-size: 28px;
+}
+.title-5{
+  position: absolute;
+  margin-top: -200px;
+  margin-left: 1120px;
+  color: white;
+  font-size: 28px;
+}
+.title-6{
+  position: absolute;
+  margin-top: -200px;
+  margin-left: 320px;
+  color: white;
+  font-size: 28px;
+}
+.title-7{
+  position: absolute;
+  margin-top: -200px;
+  margin-left: 920px;
+  color: white;
+  font-size: 28px;
+}
+
 
 
 
@@ -341,6 +413,41 @@ margin-top: 10px;
     font-weight: 800;
   }
 
+  .newsletter-section{
+    display: flex;
+    justify-content: center;
+    gap: 60px;
+    padding: 90px;
+    
+  }
+  .newsletter-title{
+    border: 1px solid red;
+    padding: 40px;
+    border-radius: 8px;
+  }
+
+  .input-1{
+    width: 393px;
+height: 52px;
+border-radius: 8px;
+background: rgba(19, 19, 24, 0.05);
+margin-top: 40px;
+padding: 10px;
+border: none;
+
+
+  }
+  .sub-btn{
+    width: 410px;
+height: 52px;
+margin-top: 20px;
+border: none;
+border-radius: 8px;
+background: #FF5400;
+color: white;
+font-size: 20px;
+  }
+
 
   footer{
     width: 1500px;
@@ -400,22 +507,6 @@ font-weight: 800
 
     .popularTours-section{
     }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
     footer{
