--- a/style.css
+++ b/style.css
@@ -494,6 +494,60 @@ font-weight: 800
     font-style: normal;
     font-weight: 300;
   }
+  .gellary-section{
+    text-align: center;
+  }
+
+  .gellary-img{
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    transition: 1s;
+  }
+  .gellary-section h2{
+    font-size: 48px;
+  }
+  .img-4:hover{
+    transform: scale(1.3);
+    z-index: 2;
+  }
+  .img-2:hover{
+    transform: scale(1.3);
+    z-index: 2;
+  }
+  .img-3:hover{
+    transform: scale(1.3);
+    z-index: 2;
+  }
+  .img-5:hover{
+    transform: scale(1.3);
+    z-index: 2;
+  }
+  .img-6:hover{
+    transform: scale(1.3);
+    z-index: 2;
+  }
+  .img-1:hover{
+    transform: scale(1.3);
+    z-index: 2;
+  }
+  .img-4{
+    width: 283px;
+    height: 160px;
+    margin-top: 20px;
+  }
+  .img-5{
+    width: 283px;
+    height: 160px;
+    margin-top: 20px;
+  }
+  .img-6{
+    width: 283px;
+    height: 160px;
+    margin-top: 20px;
+  }
 
   @media screen and (max-width: 600px) {
     .banner-container{
