--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@
 
 /* banner-section  */
 .banner-container {
-    background-image: url(/Images/Group\ 13\ \(1\)\ \(1\).png);
+    background-image: url(./Images/Group\ 13\ \(1\)\ \(1\).png);
   width: 90%;
   height: 600px;
   text-align: center;
